--- a/styles/upcomingmatch.css
+++ b/styles/upcomingmatch.css
@@ -103,25 +103,12 @@ main part
 .blog img{
     margin-bottom: 10px;
 }
-.blog a{
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: red;
-}
-.blog-info{
+.flag{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
-.comment{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.blog-details img{
-    height: 20px;
-    width: 20px;
+.blog-details{
+    text-align: center;
 }
 .viewAll-button{
     text-align: center;
@@ -260,4 +247,3 @@ footer h1{
         flex-wrap: wrap;
     }
 }
-
